# geocode

./: .gitignore  Cargo.toml  DIAGNOSTICS.md  HOMEBREW_DISTRIBUTION.md  NATIVE_DEPENDENCY_STRATEGY.md  PHASE15_EXECUTION_STATUS.md  PHASE1_AUDIT.md  PUBLIC_CLI_CONTRACT.md  PUBLIC_LAUNCH_READINESS.md  PUBLIC_RELEASE_PLAN.md  PUBLIC_RELEASE_POLICY.md  README.md  RELEASE_PROCESS.md  RELEASE_VALIDATION.md  SCOOP_DISTRIBUTION.md  SELF_UPDATE.md  WINGET_DISTRIBUTION.md  geocode_architecture_plan.md
.github/workflows/: ci.yml  release.yml
src/: agent.rs  app.rs  cli.rs  engine.rs  main.rs  output.rs  paths.rs  provider.rs  session.rs  tools.rs
src/agent/: mod.rs  planner.rs  prompt_builder.rs  schema.rs
src/array/: mod.rs
src/auth/: codex.rs  mod.rs  oauth.rs  service.rs  storage.rs  types.rs
src/bindings/: dataset.rs  gdal.rs  mod.rs  netcdf.rs  process.rs  types.rs
src/capability/: catalog.rs  mod.rs  registry.rs  types.rs
src/engine/: error.rs  mod.rs  types.rs
src/executor/: mod.rs  plan_executor.rs  values.rs
src/http/: authenticated_client.rs  mod.rs
src/memory/: mod.rs  state.rs  store.rs
src/plan/: ir.rs  mod.rs
src/policy/: execution.rs  mod.rs
src/provider/: client.rs  config.rs  mod.rs
src/runtime/: discovery.rs  host.rs  mod.rs
src/session/: mod.rs  state.rs  store.rs
src/tools/: compare.rs  geotiff.rs  mod.rs  netcdf.rs  shared.rs  types.rs
src/tui/: mod.rs
src/update/: mod.rs
tests/: agent.rs  cli_ask.rs  cli_doctor.rs  cli_public.rs  cli_self_update.rs  cli_validation.rs  compare.rs  inspect.rs  mean.rs  session.rs
