[package]
name = "geocode"
version = "0.1.0"
edition = "2024"

[dependencies]
flate2 = "1.1.0"
clap = { version = "4.5.39", features = ["derive"] }
crossterm = "0.28.1"
gdal = "0.19.0"
netcdf = "0.12.0"
ndarray = "0.16.1"
open = "5.3.2"
rand = "0.9.1"
ratatui = "0.29.0"
base64 = "0.22.1"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
tar = "0.4.44"
thiserror = "2.0.12"
url = "2.5.4"
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
tempfile = "3.20.0"
tiff = "0.10.3"
